# judim

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: cmd_basic.rs  cmd_dsk.rs  cmd_tap.rs  cpm.rs  dsk.rs  file_arg.rs  main.rs  speccy_files.rs
src/cpm/: cpm_fs.rs  dir_entry.rs  file_id.rs
src/dsk/: image.rs  structs.rs
tests/: 03.dsk
tutorial/: .gitignore  konwersja.md
