[package]
name = "judim"
version = "0.0.2"
edition = "2021"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
binrw = "0.14.1"
anyhow = "1.0.95"
clap = { version = "4.5.28", features = ["derive"] }
prettytable-rs = "0.10.0"
regex = "1.11.1"
lazy_static = "1.5.0"
fast-glob = "0.4.5"
num_enum = "0.7.5"
